--- a/www/src/main/resources/static/css/homeStyle.css
+++ b/www/src/main/resources/static/css/homeStyle.css
@@ -1,186 +1,209 @@
 @charset "UTF-8";
 
 .logo {
-	width: 150px;
+   width: 150px;
 }
 
 .mapimg {
-	height: 700px;
-	width: 900px;
+   height: 700px;
+   width: 900px;
+}
+
+.table-container {
+  max-height: 400px;
+  overflow-y: scroll;
 }
 
 table {
-	border-collapse: collapse;
+   width: 800px;
+   border-collapse: collapse;
+   
 }
 th, td {
-	border: 1px solid black;
-	padding: 5px 10px;
+   border: 1px solid black;
+   padding: 5px 10px;
 }
 
 input[id="menuicon"] {
-	display: none;
+   display: none;
 }
 
 header {
-	width: 100%;
-	/*background: #F89D4A;*/
+   width: 100%;
+   /*background: #F89D4A;*/
 }
 
 header > div {
-	position: relative;
-	width: 1200px;
-	margin: 0 auto;
+   position: relative;
+   width: 1200px;
+   margin: 0 auto;
 }
 
 header > div ul.navi {
-	font-size: 0;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding-right: 100px;
+   font-size: 0;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding-right: 100px;
 }
 
 header > div ul.navi > li {
-	font-size: 12px;
-	display: inline-block;
+   font-size: 12px;
+   display: inline-block;
 }
 
 header > div ul.navi > li > a {
-	display: block;
-	width: auto;
-	padding: 20px;
+   display: block;
+   width: auto;
+   padding: 20px;
 }
 
 .area_desc {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	font-size: 20px;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   font-size: 20px;
 }
 
 .menubtn {
-	display: block;
-	width: 50px;
-	height: 50px;
-	position: absolute;
-	top: 50%;
-	right: 10px;
-	transform: translateY(-50%);
-	cursor: pointer;
+   display: block;
+   width: 50px;
+   height: 50px;
+   position: absolute;
+   top: 50%;
+   right: 10px;
+   transform: translateY(-50%);
+   cursor: pointer;
 }
 
 .menubtn span {
-	display: block;
-	position: absolute;
-	width: 80%;
-	height: 5px;
-	border-radius: 30px;
-	background: #2A3854;
-	transition: all .35s;
+   display: block;
+   position: absolute;
+   width: 80%;
+   height: 5px;
+   border-radius: 30px;
+   background: #2A3854;
+   transition: all .35s;
 }
 
 .menubtn span:nth-child(1) {
-	top: 20%;
-	left: 50%;
-	transform: translateX(-50%);
+   top: 20%;
+   left: 50%;
+   transform: translateX(-50%);
 }
 
 .menubtn span:nth-child(2) {
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
 }
 
 .menubtn span:nth-child(3) {
-	bottom: 20%;
-	left: 50%;
-	transform: translateX(-50%);
+   bottom: 20%;
+   left: 50%;
+   transform: translateX(-50%);
 }
 
 .container {
-	width: 100%;
-	position: relative;
-	display: inline-block;
+   width: 100%;
+   position: relative;
+   display: inline-block;
 }
 
 .container .contents {
-	width: 1200px;
-	margin: 0 auto;
-	min-height: 700px;
-	/*background: #b1d0e8;*/
-	/*border: 1px solid #2A3854;
-	background: #4BB958;*/
+   width: 1200px;
+   margin: 0 auto;
+   min-height: 700px;
+   /*background: #b1d0e8;*/
+   /*border: 1px solid #2A3854;
+   background: #4BB958;*/
 }
 
 .container .sidebar {
-	position: fixed;
-	top: 0;
-	right: -300px;
-	width: 300px;
-	height: 100%;
-	/*background: #4BB958;
-	border: 1px solid #2A3854;*/
-	z-index: 30;
-	transition: .35s;
+   position: fixed;
+   top: 0;
+   right: -300px;
+   width: 300px;
+   height: 100%;
+   /*background: #4BB958;
+   border: 1px solid #2A3854;*/
+   z-index: 30;
+   transition: .35s;
 }
 
 .contents img {
-	display: block;
+   display: block;
 }
 
 .contents a {
-	text-decoration: none;
-	position: absolute;
-	transform: translate(-50%, -50%);
-	transition: all 0.3s ease;
-	color: white;
-	/*text-shadow: 
-  	-1px -1px 0 #2A3854,  
+   text-decoration: none;
+   position: absolute;
+   transform: translate(-50%, -50%);
+   transition: all 0.3s ease;
+   color: white;
+   /*text-shadow: 
+     -1px -1px 0 #2A3854,  
     1px -1px 0 #2A3854,
     -1px  1px 0 #2A3854,
     1px  1px 0 #2A3854;*/
 }
 
 .contents a:hover {
-	transform: translate(-50%, -50%) scale(1.6);
-	color: white;
-	font-weight: bold;
-	text-shadow: 
-  	-1px -1px 0 #2A3854,  
+   transform: translate(-50%, -50%) scale(1.6);
+   color: white;
+   font-weight: bold;
+   text-shadow: 
+     -1px -1px 0 #2A3854,  
     1px -1px 0 #2A3854,
     -1px  1px 0 #2A3854,
     1px  1px 0 #2A3854;
 }
 
+.sidebar-left {
+    width: 10%; /* 너비를 화면 너비의 20%로 설정 */
+    height: 40vh; /* 높이를 화면 높이의 50%로 설정 */
+    position: absolute; /* 절대 위치로 변경 */
+    top: 50%; /* 화면의 세로 중간에 배치 */
+    left: 15px;
+    transform: translateY(-50%); /* 수직 정렬을 위해 transform 사용 */
+    background-color: #f4f4f4;
+    border-right: 1px solid #ccc;
+    padding: 20px;
+    box-sizing: border-box;
+    z-index: 1000;
+    min-width: 100px; /* 최소 너비를 설정하여 너무 작아지는 것을 방지 */
+    max-width: 300px; /* 최대 너비를 설정하여 너무 커지는 것을 방지 */
+}
+
 input[id="menuicon"]:checked ~ header .menubtn {
-	z-index: 50;
+   z-index: 50;
 }
 
 input[id="menuicon"]:checked ~ header .menubtn span:nth-child(1) {
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) rotate(135deg);
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%) rotate(135deg);
 }
 
 input[id="menuicon"]:checked ~ header .menubtn span:nth-child(2) {
-	left: 50%;
-	transform: translate(-50%, -50%) scale(2);
-	opacity: 0;
+   left: 50%;
+   transform: translate(-50%, -50%) scale(2);
+   opacity: 0;
 }
 
 input[id="menuicon"]:checked ~ header .menubtn span:nth-child(3) {
-	bottom: 50%;
-	left: 50%;
-	transform: translate(-50%, 50%) rotate(-135deg);
+   bottom: 50%;
+   left: 50%;
+   transform: translate(-50%, 50%) rotate(-135deg);
 }
 
 input[id="menuicon"]:checked ~ .container .sidebar {
-	right: 0;
+   right: 0;
 }
 
 .sidebar .area_desc a {
-	display: block;
+   display: block;
   line-height: 2;
   margin-bottom: 10px;
   color: black;
@@ -196,10 +219,10 @@ input[id="menuicon"]:checked ~ .container .sidebar {
 }
 
 footer {
-	width: 1200px;
-	margin: 0 auto;
-	min-height: 60px;
-	/*background: #4BB958;*/
+   width: 1200px;
+   margin: 0 auto;
+   min-height: 60px;
+   /*background: #4BB958;*/
 }
 
 
@@ -304,10 +327,12 @@ footer {
   font-size: 1em;
   white-space: nowrap;
   color: white;
-	font-weight: bold;
-	text-shadow: 
-  	-1px -1px 0 #2A3854,  
+   font-weight: bold;
+   text-shadow: 
+     -1px -1px 0 #2A3854,  
     1px -1px 0 #2A3854,
     -1px  1px 0 #2A3854,
     1px  1px 0 #2A3854;
 }
+
+
