--- a/www/src/main/resources/templates/chungbuk.html
+++ b/www/src/main/resources/templates/chungbuk.html
@@ -133,7 +133,8 @@
 			  </th:block>
 			  <a href="/member/like">like</a><br>
 			  <a href="/place/mapAPI">mapAPI</a><br>
-        <a href="/member/customer">customer</a>
+        <a href="/member/customer">customer</a><br>
+        <a href="/member/detail">상세페이지</a>
 			</span>
 		</div>
 	</div>
