--- a/www/src/main/resources/templates/home.html
+++ b/www/src/main/resources/templates/home.html
@@ -30,6 +30,12 @@
 		</div>
 	</header>
 	
+	<div class="sidebar sidebar-left">
+    <span class="area_desc">
+      여기에 날씨 띄우기
+    </span>
+  </div>
+	
 	<div class="container">
 		<div class="contents">
 			<span class="area_desc">
@@ -65,11 +71,13 @@
 			  </th:block>
 			  <a href="/member/like">like</a><br>
 			  <a href="/place/mapAPI">mapAPI</a><br>
-        <a href="/member/customer">customer</a>
+        <a href="/member/customer">customer</a><br>
         <a href="/member/detail">상세페이지</a>
 			</span>
 		</div>
 	</div>
+	
+	
 	
 	<footer>
 		<hr>
