--- a/www/src/main/resources/templates/member/customer.html
+++ b/www/src/main/resources/templates/member/customer.html
@@ -58,12 +58,22 @@
 		<br>
 		
 		<ul class="pagemenu">
-
-      <li th:each="i : ${#numbers.sequence(pg.begin, pg.end)}">
-          <a th:href="@{customer(idx=${i})} + '#notice'">
-              <span th:text="${i}"></span>
-          </a>
-      </li>
+			<li th:if="${pg.reqPage != 1}">
+	        <a th:href="@{customer(idx=${pg.reqPage - 1})} + '#notice'">
+	            <span>이전</span>
+	        </a>
+	    </li>
+	
+	    <li th:each="i : ${#numbers.sequence(pg.begin, pg.end)}">
+	        <a th:href="@{customer(idx=${i})} + '#notice'">
+	            <span th:text="${i}"></span>
+	        </a>
+	    </li>
+	    <li th:if="${pg.reqPage != pg.totalPage and pg.totalPage > 1}">
+	      <a th:href="@{customer(idx=${pg.reqPage + 1})} + '#notice'">
+	          <span>다음</span>
+	      </a>
+    </li>
          
 		</ul>
 		<!-- 관리자가 아니면 글쓰기 활성화 안됨 -->
@@ -124,7 +134,7 @@
 
 	<script>
 	//세션에서 로그인 상태 가져옴
-	let userlogin = sessionStrage.getItem('userlogin') === 'true';
+	let userlogin = sessionStorage.getItem('userlogin') === 'true';
 	
         function showSection(sectionId) {
           //섹션 클래스를 가진 요소중 특정 섹션만 보여줌
@@ -144,13 +154,14 @@
 		      alert('asdasd');
 
 		    };
-		    
 		    document.addEventListener('DOMContentLoaded', function() {
         if (window.location.hash === '#notice') {
             showSection('notice');
             document.getElementById('notice').scrollIntoView();
         }
-    });
+        });
+		    
+    
 		    function loginSuccess() {
 		      userlogin = true;
 		      sessionStorage.setItem('userlogin', true);
