댓글 수정, 삭제

--- a/www/src/main/resources/static/css/CustomerStyle.css
+++ b/www/src/main/resources/static/css/CustomerStyle.css
@@ -18,12 +18,37 @@ header {
 
 nav ul {
     list-style: none;
-    text-align: center;
+    display: flex;
+    justify-content: center; /* ul 내부의 항목들을 가운데로 정렬 */
+    align-items: center;
+    padding: 0;
 }
 
 nav ul li {
-    display: inline;
+    display: inline-block;
     margin: 0 15px;
+}
+
+/* 로고 이미지를 담은 li에 대한 스타일 추가 */
+nav ul li:first-child {
+    margin-right: auto; /* 로고가 왼쪽에 위치하도록 설정 */
+}
+
+/* 로고 이미지 크기 조정 */
+nav ul li .logo {
+    height: 50px; /* 로고 이미지의 높이 설정 */
+    width: auto; /* 가로 세로 비율 유지 */
+    display: block; /* 로고 이미지가 블록 요소로 취급되도록 설정 */
+}
+
+.section h2 {
+    text-align: center; /* 제목을 가운데 정렬 */
+}
+
+nav {
+    display: flex;
+    justify-content: center; /* nav 전체를 가운데로 정렬 */
+    align-items: center;
 }
 
 nav ul li a {
