--- a/www/src/main/resources/templates/member/csView.html
+++ b/www/src/main/resources/templates/member/csView.html
@@ -1,60 +1,92 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title th:text="${row.title}">Q&A 게시글</title>
-    <link rel="stylesheet" href="/css/viewStyle.css"> <!-- 스타일을 위한 CSS 파일 경로 -->
+<meta charset="UTF-8">
+<title th:text="${row.title}">Q&A 게시글</title>
+<link rel="stylesheet" href="/css/viewStyle.css">
+<!-- 스타일을 위한 CSS 파일 경로 -->
 </head>
 <body>
-    <div class="post-container">
-        <h1 th:text="${row.title}">Q&A 제목</h1>
-        <p><strong>작성자:</strong> <span th:text="${row.nick}">작성자</span></p>
-        <hr/>
-        <div class="post-content">
-            <p th:text="${row.content}">Q&A 내용</p>
-        </div>
-    </div>
-    
-   <!-- 댓글 작성 폼 -->
-    <div th:if="${session.user != null}">
-    <form method="POST">
-      <p><textarea name="contents" placeholder="댓글을 입력해 주세요"></textarea></p>
-      <p><input name="a_idx" type="hidden" th:value="${session.user.accounts_idx}"></p>
-      
-      <button>작성</button>
-    </form>
-    </div>
-    
-    <br>
-    
-    <fieldset th:each="rep : ${replys}">
-      <h5 th:text="${rep.nick}"> | </h5><h5 th:text="${rep.w_date}"></h5>
-      
-      <pre th:text="${rep.contents}"></pre>
-    </fieldset>
-  
-  <!-- 글쓴 본인만 수정 삭제 버튼 활성화 -->
-<div th:if="${session.user != null and (session.user.nick == row.nick or session.user.nick == '관리자')}">    <button>수정</button>
-    <button>삭제</button>
-  </div>
-  
-  <script th:inline="javascript">
-    // 타임리프를 통해 세션에 저장된 로그인된 유저 ID를 JavaScript 변수에 할당
+	<div class="post-container">
+		<h1 th:text="${row.title}">Q&A 제목</h1>
+		<p>
+			<strong>작성자:</strong> <span th:text="${row.nick}">작성자</span>
+		</p>
+		<hr />
+		<div class="post-content">
+			<p th:text="${row.content}">Q&A 내용</p>
+		</div>
+	</div>
 
-        // 수정 버튼
-        let btns = document.querySelectorAll('button');
-        btns[0].onclick = () => {
-            location.href = '/member/csUpdate/[[${row.board_idx}]]';
-        };
-        
-        // 삭제 버튼
-        btns[1].onclick = () => {
-            location.href = '/member/csdelete/[[${row.board_idx}]]';
-        };
-    	
-      //js에서 타임리프 구문 
-      location.href = '/member/csdelete/[[${row.board_idx}]]';
-    };
-  </script>
-</body>  
+	<!-- 댓글 작성 폼 -->
+	<div th:if="${session.user != null}">
+		<form method="POST">
+			<p>
+				<textarea name="contents" placeholder="댓글을 입력해 주세요"></textarea>
+			</p>
+			<p>
+				<input name="a_idx" type="hidden"
+					th:value="${session.user.accounts_idx}">
+			</p>
+
+			<button>작성</button>
+		</form>
+	</div>
+
+	<br>
+
+	<fieldset th:each="rep : ${replys}">
+		<h5 th:text="${rep.nick}">|</h5>
+		<h5 th:text="${rep.w_date}">|</h5>
+
+		<div id="replyContent_${rep.rep_idx}">
+			<pre th:text="${rep.contents}"></pre>
+		</div>
+		<!-- 댓글 쓴 본인만 수정 삭제 버튼 활성화 -->
+
+		<div
+			th:if="${session.user != null and session.user.accounts_idx == rep.a_idx}">
+			<button th:onclick="|fn_update('${rep.rep_idx}')|"
+				th:classid="editBtn_" type="button">댓글 수정</button>
+			<a
+				th:href="@{/member/csView/delete(rep_idx=${rep.rep_idx}, c_idx=${rep.c_idx})}">
+				<button type="button">삭제</button>
+			</a>
+		</div>
+
+
+		<!-- 댓글 수정 폼 (기본적으로 숨김 처리)-->
+		<div th:id="'editForm_' + ${rep.rep_idx}" style="display: none">
+			<form action="/member/repUpdate" method="POST">
+				<input type="hidden" name="rep_idx" th:value="${rep.rep_idx}">
+				<input type="hidden" name="c_idx" th:value="${rep.c_idx}">
+				<textarea name="contents" th:text="${rep.contents}"></textarea>
+				<button type="submit">수정 완료</button>
+			</form>
+		</div>
+
+	</fieldset>
+
+
+	<!-- 글쓴 본인만 수정 삭제 버튼 활성화 -->
+	<div
+		th:if="${session.user != null and (session.user.nick == row.nick or session.user.nick == '관리자')}">
+		<a
+			th:href="@{/member/csUpdate/{board_idx}(board_idx=${row.board_idx})}"><button>수정</button></a>
+		<a
+			th:href="@{/member/csdelete/{board_idx}(board_idx=${row.board_idx})}"><button>삭제</button></a>
+	</div>
+
+	<script>
+  
+
+    function fn_update(idx) {
+        const formId = 'editForm_' + idx;
+        document.querySelector('#' + formId).style.display = "block";
+    }
+
+
+</script>
+
+</body>
 </html>
