숙소, 길찾기, 상세페이지

--- a/www/src/main/resources/templates/home.html
+++ b/www/src/main/resources/templates/home.html
@@ -111,6 +111,8 @@
 			  <a href="/place/mapAPI">mapAPI</a><br>
         <a href="/member/customer">customer</a><br>
         <a href="/member/detail">상세페이지</a>
+        <a href="/member/accommodation">숙박</a>
+        <a href="/member/location">길찾기</a>
 			</span>
 		</div>
 	</div>
