--- a/www/src/main/resources/templates/recommendResult.html
+++ b/www/src/main/resources/templates/recommendResult.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>traverse</title>
-  
-  <link href="/css/homeStyle.css" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>traverse</title>
+
+<link href="/css/homeStyle.css" rel="stylesheet">
 </head>
 <body>
 
@@ -13,33 +13,30 @@
 	<header>
 		<div>
 			<ul class="navi">
-				<li><a href="/"><img class="logo" th:src="@{/image/logo_w.png}"></a></li>
-				<li th:if="${session.user == null}">
-					<a href="/member/login">login</a>
+				<li><a href="/"><img class="logo"
+						th:src="@{/image/logo_w.png}"></a></li>
+				<li th:if="${session.user == null}"><a href="/member/login">login</a>
 				</li>
-				<li th:if="${session.user != null}">
-					<a href="/member/myPage">myPage</a>
+				<li th:if="${session.user != null}"><a href="/member/myPage">myPage</a>
 				</li>
-		  </ul>
-		  
-		  <label for="menuicon" class="menubtn">
-		  	<span></span>
-		  	<span></span>
-		  	<span></span>
-		  </label>
+			</ul>
+
+			<label for="menuicon" class="menubtn"> <span></span> <span></span>
+				<span></span>
+			</label>
 		</div>
 	</header>
-	
+
 	<div class="container">
 		<div class="contents">
-			<span class="area_desc">
-				추천 결과 보여주는 페이지
+			<span class="area_desc"> 추천 결과 보여주는 페이지
 				<ul>
 					<li th:text="'계정 번호 : ' + ${result.a_idx}"></li>
-					<li th:text="'지역 코드 : ' + ${result.areaCode} + ' : ' + ${result.sigunguCode1} + ', ' + ${result.sigunguCode2} + ', ' + ${result.sigunguCode3}"></li>
+					<li
+						th:text="'지역 코드 : ' + ${result.areaCode} + ' : ' + ${result.sigunguCode1} + ', ' + ${result.sigunguCode2} + ', ' + ${result.sigunguCode3}"></li>
 					<li th:text="'여행 기간 : ' + ${result.duration / 5}"></li>
 				</ul>
-				
+
 				<div class="table-container">
 					<table>
 						<tr>
@@ -47,35 +44,38 @@
 							<th>address</th>
 						</tr>
 						<tr th:each="row : ${place}">
-							<td th:text="${row.title}"></td>
+							<td class="normal">
+								<!-- 제목을 클릭하면 해당 상세 페이지로 이동 --> <a
+								th:href="@{/member/detail/{idx}(idx=${row.idx})}"
+								th:text="${row.title}"></a>
+							</td>
 							<td th:text="${row.addr1}"></td>
 						</tr>
 					</table>
 				</div>
 			</span>
-			
+
 		</div>
 		<div class="sidebar">
-			<span class="area_desc">
-			  <a href="/member/signUp">signUp</a><br>
-			  <th:block th:if="${session.user == null}">
-			  	<a href="/member/login">login</a><br>
-			  </th:block>
-			  <th:block th:if="${session.user != null}">
-			  	<a href="/member/logout">logout</a><br>
-			  	<a href="/member/myPage">myPage</a><br>
-			  </th:block>
-			  <a href="/member/like">like</a><br>
-			  <a href="/place/mapAPI">mapAPI</a><br>
-        <a href="/member/customer">customer</a><br>
-        <a href="/member/detail">상세페이지</a>
+			<span class="area_desc"> <a href="/member/signUp">signUp</a><br>
+				<th:block th:if="${session.user == null}">
+					<a href="/member/login">login</a>
+					<br>
+				</th:block> <th:block th:if="${session.user != null}">
+					<a href="/member/logout">logout</a>
+					<br>
+					<a href="/member/myPage">myPage</a>
+					<br>
+				</th:block> <a href="/member/like">like</a><br> <a href="/place/mapAPI">mapAPI</a><br>
+				<a href="/member/customer">customer</a><br> <a
+				href="/member/detail">상세페이지</a>
 			</span>
 		</div>
 	</div>
-	
+
 	<footer>
 		<hr>
-		<div>회사소개  |  이용약관  |  등등...</div>
+		<div>회사소개 | 이용약관 | 등등...</div>
 	</footer>
 
 </body>
