--- a/www/src/main/resources/templates/home.html
+++ b/www/src/main/resources/templates/home.html
@@ -110,7 +110,8 @@
 			  <a href="/member/like">like</a><br>
 			  <a href="/place/mapAPI">mapAPI</a><br>
         <a href="/member/customer">customer</a><br>
-        <a href="/member/detail">상세페이지</a>
+        <a href="/member/detail">상세페이지</a><br>
+        <a href="/place/travelplan">여행계획</a>        
 			</span>
 		</div>
 	</div>
