--- a/www/src/main/resources/templates/recommendResult.html
+++ b/www/src/main/resources/templates/recommendResult.html
@@ -38,17 +38,33 @@
 					<li th:text="'계정 번호 : ' + ${result.a_idx}"></li>
 					<li th:text="'지역 코드 : ' + ${result.areaCode} + ' : ' + ${result.sigunguCode1} + ', ' + ${result.sigunguCode2} + ', ' + ${result.sigunguCode3}"></li>
 					<li th:text="'여행 기간 : ' + ${result.duration / 5}"></li>
+					<li th:text="${seldate}"></li>
 				</ul>
 				
 				<div class="table-container">
 					<table>
 						<tr>
+							<th></th>
 							<th>title</th>
 							<th>address</th>
 						</tr>
 						<tr th:each="row : ${place}">
+						  <td>
+                 <a th:href="@{/place/planadd(
+								    p_idx=${row.idx},
+								    a_idx=${result.a_idx},
+								    areaCode=${result.areaCode},
+								    sigunguCode1=${result.sigunguCode1},
+								    sigunguCode2=${result.sigunguCode2},
+								    sigunguCode3=${result.sigunguCode3},
+								    sel_idx=${result.sel_idx},
+								    duration=${result.duration})}">
+								    추가
+								</a>
+              </td>
 							<td th:text="${row.title}"></td>
 							<td th:text="${row.addr1}"></td>
+							<td th:text="${row.idx}"></td>
 						</tr>
 					</table>
 				</div>
