--- a/www/src/main/resources/templates/home.html
+++ b/www/src/main/resources/templates/home.html
@@ -78,7 +78,7 @@
 	<div class="container">
 		<div class="contents">
 			<span class="area_desc">
-				<img class="mapimg" th:src="@{/image/map1.png}">
+				<img class="mapimg" th:src="@{/image/map01.jpeg}">
 				<a href="/gyeonggi" style="top: 26%; left: 35%">경기</a>
 				<a href="/gangwon" style="top: 20%; left: 58%">강원</a>
 				<a href="/chungbuk" style="top: 35%; left: 45%">충북</a>
