--- a/www/src/main/resources/templates/duration.html
+++ b/www/src/main/resources/templates/duration.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>traverse</title>
   
-  <link href="/css/homeStyle.css" rel="stylesheet">
+  <link href="/css/mainStyle.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 <body>
