프라그먼트,여행계획

--- a/www/src/main/resources/templates/member/findID.html
+++ b/www/src/main/resources/templates/member/findID.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<link href="/css/LoginStyle.css" rel="stylesheet">
+	<meta charset="UTF-8">
+	<title>Insert title here</title>
+	<link href="/css/mainStyle.css" rel="stylesheet">
+	<link href="/css/LoginStyle.css" rel="stylesheet">
 </head>
 <body>
+  <th:block th:replace="/fragment::header"></th:block>
+
 <fieldset>
   <legend>ID찾기</legend>
   
@@ -18,5 +21,8 @@
  
   
 </fieldset>
+
+
+<th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
