--- a/www/src/main/resources/templates/member/newPW.html
+++ b/www/src/main/resources/templates/member/newPW.html
@@ -3,9 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<link href="/css/LoginStyle.css" rel="stylesheet">
+<link href="/css/mainStyle.css" rel="stylesheet">
+  <link href="/css/LoginStyle.css" rel="stylesheet">
 </head>
 <body>
+<th:block th:replace="/fragment::header"></th:block>
 <fieldset>
   <legend>PW 변경</legend>
   
@@ -21,22 +23,29 @@
     let inputs = document.querySelectorAll('input');
     let button = document.querySelector('button');
     
+    
+    
     button.onclick = () =>{
-      let userpw = inputs[0].value;
-      let check = inputs[1].value;
+      let userpw = inputs[1].value;
+      let check = inputs[2].value;
       
       if(userpw !== check){
         alert('패스워드가 일치하지 않습니다');
         
-        inputs[0].value = '';
         inputs[1].value = '';
+        inputs[2].value = '';
         
-        inputs[0].focus();
+        inputs[1].focus();
+      }else{
+        alert('비밀번호가 변경 되었습니다');
       }
     }
+    
   </script>
   
   
 </fieldset>
+
+<th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
