--- a/www/src/main/resources/templates/member/signUp.html
+++ b/www/src/main/resources/templates/member/signUp.html
@@ -5,6 +5,7 @@
 <title>회원가입 페이지</title>
 
 <link href="/css/signUpStyle.css" rel="stylesheet">
+<link href="/css/mainStyle.css" rel="stylesheet">
 </head>
 
 <body>
